<resources>
    <string name="app_name">小白词</string>
    <string name="app_logo">小白词logo</string>
    <string name="app_version_info">当前版本：%s</string>
    <string name="short_placeholder">测试</string>
    <string name="short_home">主页</string>
    <string name="short_my">我的</string>
    <string name="short_search">搜索</string>
    <string name="short_refresh">刷新</string>
    <string name="short_switch_swipe_orientation">切换滑动方向</string>
    <string name="long_horiz_orientation_hint">目前的滑动方向为左右滑动</string>
    <string name="long_vert_orientation_hint">目前的滑动方向为上下滑动</string>
    <string name="short_favorite">收藏</string>
    <string name="short_word_detail">词语详情</string>
    <string name="short_history">历史记录</string>
    <string name="short_search_history">搜索历史</string>
    <string name="short_delete">删除</string>
    <string name="short_clear">清除</string>
    <string name="short_retry">重试</string>
    <string name="short_default">默认</string>
    <string name="long_enter_keyword">请输入关键词…</string>
    <string name="long_enter_favorite_name">请输入收藏夹名称</string>
    <string name="long_bottom">到底了…</string>
    <string name="long_scroll_down_more">下滑加载更多</string>
    <string name="long_loading">加载中…</string>
    <string name="long_error">出错了(╥_╥)</string>
    <string name="long_tts_invalid">语音引擎不可用</string>
    <string name="long_no_suggestion">无建议</string>
    <string name="long_hanzi_word_count">词语数量：%d</string>
    <string name="long_change_success">更改成功</string>
    <string name="short_change">更改</string>
    <string name="short_confirm">确认</string>
    <string name="long_go_check">前往查看</string>
    <string name="long_nav_menu_item">导航菜单项</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="short_my_favorites">我的收藏夹</string>
    <string name="short_my_favorite">我的收藏</string>
    <string name="short_browsing_histories">浏览历史</string>
    <string name="short_settings">设置</string>
    <string name="long_brand_icon">小白词图标</string>
    <string name="short_exit_app">退出应用</string>
    <string name="short_add">添加</string>
    <string name="long_check_favorite">勾选收藏夹</string>
    <string name="short_night_mode">夜间模式</string>
    <string name="short_switch_night">切换夜间模式</string>
    <string name="short_about_app">关于小白词</string>
    <string name="long_confirm_exit_app">你确定要退出应用吗？</string>
    <string name="short_cancel">取消</string>
    <string name="short_sure">确定</string>
    <string name="short_feedback">反馈</string>
    <string name="long_feedback_instruction">有问题或者想交流，请给我发邮件。邮箱地址：imlilinsong@163.com</string>
    <string name="long_my_email">imlilinsong@163.com</string>
    <string name="short_copy_email">复制邮箱地址</string>
    <string name="short_email_address">邮箱地址</string>
    <string name="short_words">词语</string>
    <string name="long_copy_email_notice">邮件地址已复制到剪贴板</string>
    <string name="long_copy_words_notice">词语已复制</string>
    <string name="long_ic_close">关闭图标</string>
    <string name="short_save">保存</string>
    <string name="short_cancel_favorite">取消收藏</string>
    <string name="short_select_favorite">选择收藏夹</string>
    <string name="short_move_to">移动到</string>
    <string name="short_copy_to">复制到</string>
    <string name="short_copy">复制</string>
    <string name="long_more_operations">更多操作</string>
    <string name="short_edit">编辑</string>
    <string name="short_batch">批量操作</string>
    <string name="short_exit_multiselect">退出批量操作</string>
    <string name="short_select_all">全选</string>
    <string name="long_selected_count">已选：%d</string>
    <string name="short_delete_favorite">删除收藏夹</string>
    <string name="long_confirm_delete_favorite">删除收藏夹奖清空所有收藏于此的词语，你确定要删除此收藏夹吗？</string>
    <string name="long_operation_failed">操作失败</string>
    <string name="long_operation_success">操作成功</string>
    <string name="long_select_words">请先选择词语</string>
    <string name="short_toolbar">工具栏</string>
    <string name="long_not_empty">不能为空</string>
    <string name="short_start_date">开始日期</string>
    <string name="short_today">今天</string>
    <string name="short_yesterday">昨天</string>
    <string name="short_all">全部</string>
    <string name="short_select_date">选择日期</string>
    <string name="short_clear_browsing_histories">清除浏览历史</string>
    <string name="long_clear_browsing_histories">你确定要清除所有的浏览历史记录吗？</string>
    <string name="long_confirm_delete">你确定要删除吗？</string>
    <string name="long_fab_favorite">悬浮收藏按钮</string>
    <string name="short_edit_favorite">编辑收藏夹</string>
    <string name="short_create_favorite">新建收藏夹</string>
</resources>