<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:defaultValue="-1"
        app:entries="@array/night_mode_entries"
        app:entryValues="@array/night_mode_values"
        app:key="nightMode"
        app:title="@string/short_night_mode"
        app:dialogTitle="@string/short_switch_night"
        app:negativeButtonText="@string/short_cancel"
        app:summary="@string/short_switch_night"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:widgetLayout="@layout/view_ic_forward"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="feedback"
        app:title="@string/short_feedback"
        app:widgetLayout="@layout/view_ic_forward"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="aboutApp"
        app:title="@string/short_about_app"
        app:widgetLayout="@layout/view_ic_forward"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />

</PreferenceScreen>