<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_recycler_hanzi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:itemCount="22"
        tools:listitem="@layout/item_favorite_hanzi" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favorite_bottom_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimaryContainer"
        android:padding="@dimen/padding_small"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
        tools:visibility="visible">

        <Button
            android:id="@+id/favorite_btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_cancel_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/favorite_cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_select_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/favorite_text_selected_count"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/favorite_text_selected_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:textAppearance="?attr/textAppearanceLabelSmall"
            app:layout_constraintBaseline_toBaselineOf="@id/favorite_cb_select_all"
            app:layout_constraintStart_toEndOf="@id/favorite_cb_select_all"
            tools:text="已选：0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/favorite_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/short_toolbar"
            app:title="@string/short_favorite"
            tools:navigationContentDescription="@string/short_placeholder"
            tools:menu="@menu/toolbar_favorite_menu"
            tools:navigationIcon="@drawable/ic_close" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/favorite_text_hanzi_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/long_hanzi_word_count"
                android:textAppearance="?attr/textAppearanceLabelSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/favorite_text_name"
                app:layout_constraintTop_toBottomOf="@id/favorite_text_name" />

            <TextView
                android:id="@+id/favorite_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:textAppearance="?attr/textAppearanceHeadlineLarge"
                app:layout_constraintBottom_toTopOf="@id/favorite_text_hanzi_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/short_favorite" />

            <TextView
                android:id="@+id/favorite_text_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_small"
                android:background="?attr/colorSecondaryContainer"
                android:text="@string/short_default"
                android:textAppearance="?attr/textAppearanceLabelSmall"
                app:layout_constraintBottom_toBottomOf="@id/favorite_text_name"
                app:layout_constraintStart_toEndOf="@id/favorite_text_name"
                app:layout_constraintTop_toTopOf="@id/favorite_text_name" />

            <TextView
                android:id="@+id/favorite_text_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:text="@string/short_delete"
                app:layout_constraintEnd_toStartOf="@id/favorite_text_edit"
                app:layout_constraintTop_toTopOf="@id/favorite_text_name" />

            <TextView
                android:id="@+id/favorite_text_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:text="@string/short_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/favorite_text_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>