<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/margin_normal"
    android:paddingVertical="@dimen/padding_small"
    tools:showIn="@layout/bottom_sheet_favorite_selection">

    <TextView
        android:id="@+id/text_selective_favorite_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/short_favorite"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintBottom_toTopOf="@id/text_selective_favorite_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_selective_favorite_tag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_selective_favorite_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_small"
        tools:text="@string/short_default"
        android:background="?attr/colorSecondaryContainer"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        app:layout_constraintTop_toTopOf="@id/text_selective_favorite_name"
        app:layout_constraintStart_toEndOf="@id/text_selective_favorite_name"
        app:layout_constraintBottom_toBottomOf="@id/text_selective_favorite_name" />

    <TextView
        android:id="@+id/text_selective_favorite_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_hanzi_word_count"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        app:layout_constraintStart_toStartOf="@id/text_selective_favorite_name"
        app:layout_constraintTop_toBottomOf="@id/text_selective_favorite_name"
        app:layout_constraintBottom_toBottomOf="parent" />

    <CheckBox
        android:id="@+id/cb_selective_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/long_check_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />
</androidx.constraintlayout.widget.ConstraintLayout>