<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_normal"
    tools:context=".ui.favoriteedit.FavoriteEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fe_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/long_enter_favorite_name"
        app:errorEnabled="true"
        app:layout_constraintWidth_max="@dimen/m3_max_text_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fe_cb_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fe_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/fe_cb_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_default"
        android:layout_marginVertical="@dimen/margin_normal"
        app:layout_constraintBottom_toTopOf="@id/fe_btn_save"
        app:layout_constraintStart_toStartOf="@id/fe_input_layout"
        app:layout_constraintTop_toBottomOf="@id/fe_input_layout" />

    <Button
        android:id="@+id/fe_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_save"
        android:paddingHorizontal="@dimen/padding_large"
        android:layout_marginVertical="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/fe_cb_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>